# tic-tac-toe

./: .gitignore  Cargo.toml  LICENSE
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/handlers/: game.rs  websocket.rs
backend/src/models/: game.rs  player.rs
backend/src/services/: game_manager.rs
backend/src/utils/: mod.rs  websocket_utils.rs
frontend/: Cargo.toml
frontend/assets/: main.css
frontend/src/: main.rs  routes.rs
frontend/src/components/: game_board.rs  home.rs  lobby.rs  mod.rs
frontend/src/services/: websocket.rs
frontend/src/utils/: router.rs
shared/: Cargo.toml
shared/src/: game_state.rs  lib.rs  messages.rs
