[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["felixLandlord <felix.landlord.nunoo@gmail.com>"]

[workspace.metadata]
name = "tic-tac-toe"
description = "A tic-tac-toe game with Dioxus frontend and Actix-web backend"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tokio = { version = "1.45.1", features = ["full"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
