[package]
name = "frontend"
version = "0.1.0"
authors = ["felixLandlord <felix.landlord.nunoo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
shared = { path = "../shared" }

# web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
# dioxus-signals = "0.6.3"
console_error_panic_hook = "0.1.7"
dioxus-web = "0.6.0"

[dependencies.web-sys]
version = "0.3.77"
features = ["console", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent"]

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
